#513 [CSS] fix: too much grey

--- a/css/scss/element/_project-list.scss
+++ b/css/scss/element/_project-list.scss
@@ -58,7 +58,7 @@
             }
 
             .reedcrm-plist-relaunch-btn-content.count-zero {
-                filter: grayscale(0.85) opacity(0.8);
+                filter: grayscale(0.3) opacity(0.8);
             }
 
             // The 'plus' quick add button
